# opengl-test

./: CMakeLists.txt  Makefile  run
assets/: basic.glsl
assets/shaders/: approach_circle.glsl  basic.glsl  circle.glsl  texture.glsl
src/: beatmap.cpp  beatmap.hpp  index_buffer.cpp  index_buffer.h  index_buffer.hpp  main.cpp  mesh.cpp  mesh.hpp  osu_parser.cpp  osu_parser.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_loader.cpp  shader_loader.h  sprite.cpp  sprite.hpp  text_renderer.cpp  text_renderer.hpp  texture.cpp  texture.hpp  ui.cpp  ui.hpp  utils.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer.hpp  vertex_buffer_layout.hpp
